# backlight

./: CMakeLists.txt  LICENSE
src/: backlight.cpp  backlight_absolute.cpp  backlight_decrement.cpp  backlight_increment.cpp  generate_backlight_config_file.cpp
